# TheatrhythmIO

./: README.md
TheatrhythmIO/: Descriptors.c  Descriptors.h  FFT_HID.c  FFT_HID.h  LUFAConfig.h  RGB.c  RGB.h  TheatrhythmIO.ino  config.h  digitalWriteFast.h  pinout.h
TheatrhythmIO_pico/: CMakeLists.txt  README.md
TheatrhythmIO_pico/src/: CMakeLists.txt  controller_config.h  main.cpp  pinout.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
